--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "webpack-dev-server",
     "start:dev": "webpack-dev-server --config webpack.config.dev.js",
     "start:prod": "webpack --config webpack.config.prod.js",
-    "build": "webpack --config webpack.config.dev.js --mode production"
+    "build": "webpack --config webpack.config.dev.js --mode production",
+    "test": "jest --coverage --colors",
+    "test:watch": "jest --watchAll --coverage --colors",
+    "test:cypress": "jest & npm run start:dev & wait-on http://localhost:8092 & ./node_modules/.bin/cypress run"
   },
   "repository": {
     "type": "git",
@@ -34,22 +37,35 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.6.0",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "clean-webpack-plugin": "^1.0.1",
+    "css-loader": "^2.1.1",
+    "cypress": "^3.2.0",
+    "dotenv-webpack": "^1.7.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "enzyme-to-json": "^3.3.5",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "clean-webpack-plugin": "^1.0.1",
-    "css-loader": "^2.1.1",
-    "dotenv-webpack": "^1.7.0",
+    "fetch-mock": "^7.3.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.6.0",
+    "moxios": "^0.4.0",
+    "node-fetch": "^2.3.0",
     "node-sass": "^4.11.0",
-    "start-server-and-test": "^1.7.13"
+    "react-test-renderer": "^16.8.6",
+    "redux-mock-store": "^1.5.3",
+    "start-server-and-test": "^1.7.13",
+    "sinon": "^7.3.1",
+    "wait-on": "^3.2.0"
   },
   "dependencies": {
     "@babel/cli": "^7.2.3",
@@ -62,33 +78,54 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.4.3",
     "@emotion/core": "^10.0.10",
+    "axios": "^0.18.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.6.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "classnames": "^2.2.6",
-    "babel-eslint": "^10.0.1",
-
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.1",
+    "date-fns": "^1.30.1",
+    "dotenv": "^7.0.0",
     "dotenv-webpack": "^1.7.0",
+    "emotion": "^10.0.9",
+    "enzyme-to-json": "^3.3.5",
+    "expect": "^24.7.1",
+    "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "formdata-json": "^1.0.0",
+    "fs": "^0.0.1-security",
     "html-webpack-plugin": "^3.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "keymirror": "^0.1.1",
+    "moxios": "^0.4.0",
     "node-sass": "^4.11.0",
+    "nyc": "^13.3.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
+    "react-content-loader": "^4.2.1",
     "react-dom": "^16.8.3",
+    "react-modal": "^3.8.1",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
+    "react-spinners": "^0.5.4",
+    "react-toastify": "^5.0.1",
+    "reduce-reducers": "^1.0.1",
     "redux": "^4.0.1",
+    "redux-action-types-creator": "^1.2.0",
     "redux-devtools-extension": "^2.13.8",
+    "redux-mock-store": "^1.5.3",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "validator": "^10.11.0",
     "wait-on": "^3.2.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
