--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "react-content-loader": "^4.2.1",
     "react-dom": "^16.8.3",
     "react-modal": "^3.8.1",
+    "react-onclickoutside": "^6.8.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
